<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name_samudra">Samudra</string> -->

    <string name="app_name_samudra">SAMS</string>
    <string name="app_name">SAMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_user_id">Mobile Number:</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_hint_id">enter mobile number</string>
    <string name="lbl_hint_date">enter date</string>
    <string name="lbl_hint_password">enter password</string>
    <string name="lbl_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="lbl_home">Home</string>
    <string name="app_full_name">Samudra Technologies</string>
    <string name="app_name_technologies">Technologies</string>
    <string name="lbl_main_master">Master</string>
    <string name="lbl_main_entry">Entry</string>
    <string name="lbl_main_reports">Reports</string>
    <string name="lbl_main_utilites">Utilities</string>
    <string name="lbl_main_imp">IMP</string>
    <string name="lbl_main_exit">Exit</string>
    <string name="lbl_mst_route">Route</string>
    <string name="lbl_mst_socity">Socity</string>
    <string name="lbl_mst_mobile">Mobile No</string>
    <string name="lbl_mst_f_officer">Field Officer</string>
    <string name="lbl_mst_user_master">User Master</string>
    <string name="lbl_mst_contractor">Contractor Master</string>
    <string name="lbl_mst_tehsil">Tehsil/Area/Block</string>
    <string name="lbl_mst_change_route">Change Route Time Data</string>
    <string name="lbl_mst_change_society">Change Society Master Data</string>
    <string name="lbl_entry_d_side">Dock Side</string>
    <string name="lbl_entry_l_side">Lab Side</string>
    <string name="lbl_entry_truck_arrival">Trauck Arrival</string>
    <string name="lbl_report_clist">Check List</string>
    <string name="lbl_report_sample_data">Sample Wise Data check List</string>
    <string name="lbl_report_zero_lr">Zero LR Check List</string>
    <string name="lbl_report_t_sheet">Truck Sheet</string>
    <string name="lbl_report_t_route">Traditional Route Wise Summary</string>
    <string name="lbl_report_route_summary">Route Wise Summary</string>
    <string name="lbl_report_society_slip">Society Slip</string>
    <string name="lbl_report_daily_milk">Daily Milk Summary</string>
    <string name="lbl_util_final_dock">Final Dock Data Updation</string>
    <string name="lbl_util_mis_data">MIS Data Export</string>
    <string name="lbl_util_export_data_bill">Exporting Data in Billong</string>
    <string name="lbl_util_advance">Advanced All Purpose Query</string>
    <string name="lbl_util_modification">Modification Entry</string>
    <string name="lbl_util_manual">Manual Entry</string>
    <string name="lbl_rmrd_master">RMRD Master</string>
    <string name="lbl_rmrd">RMRD</string>
    <string name="lbl_rmrd_report">RMRD Report</string>
    <string name="lbl_imp_update">Update</string>
    <string name="lbl_imp_truck_arr">Truck Arr Time Modification</string>
    <string name="lbl_select_state">Select State:</string>
    <string name="lbl_select_center">Select Center:</string>
    <string name="lbl_doc_no">Doc Number:</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_shift">Shift:</string>
    <string name="lbl_shift_morning">Morning</string>
    <string name="lbl_shift_night">Night</string>

    <color name="white_bg">#FFFFFF</color>
    <color name="white_blur">#F9F9F8</color>
    <color name="black_list_item">#666666</color>
    <color name="light_green">#8FB921</color>
    <color name="title_blue">#39B0C6</color>

    <string name="lbl_booth">Booth</string>
    <string name="lbl_supplay_chain">Supply Chain</string>
    <string name="lbl_admin">Admin</string>
    <string name="lbl_order_place">Order Place</string>
    <string name="lbl_previous_order">Previous Order</string>
    <string name="lbl_online_payment">Online Payment</string>
    <string name="lbl_account_statement">Account Statement</string>
    <string name="lbl_booth_delivery">Booth Delivery</string>
    <string name="lbl_route_summary">Route Summary</string>
    <string name="lbl_stock_summary">Stock Summary</string>
    <string name="lbl_product_id">Product Id:</string>
    <string name="lbl_quantity">Quantity:</string>
    <string name="lbl_booth_detail">Booth Deatil</string>
    <string name="lbl_booth_id">Id:</string>
    <string name="lbl_booth_area">Area: </string>
    <string name="lbl_balance">Balance: </string>
    <string name="lbl_last_order">Last Order: </string>
    <string name="lbl_order_shift">O_Shift:</string>
    <string name="lbl_current_order">C_Order: </string>
    <string name="lbl_prodcut_detail">Product Detail</string>
    <string name="lbl_product_code">Product Code: </string>
    <string name="lbl_product_name">Name: </string>
    <string name="lbl_product_rate">Product Rate:</string>
    <string name="lbl_qty">Qty:</string>
    <string name="lbl_total">Total:</string>
    <string name="inform_mobile">Please enter mobile number</string>
    <string name="inform_password">Please enter Pasword</string>
    <string name="lbl_submit_order">Submit</string>
    <string name="lbl_send_sms">SMS</string>
    <string name="lbl_calcel">Back</string>
    <string name="lbl_exit">Exit</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_mobile_no">Mobile Number:</string>
    <string name="lbl_order_detail">Order Detail:</string>
    <string name="lbl_new_order">New Order</string>
    <string name="lbl_report">Reports</string>
    <string name="lbl_report_history">Lab History</string>
    <string name="lbl_doc_history">Doc History</string>
    <string name="lbl_from_date">From Date:</string>
    <string name="lbl_to_date">To Date:</string>
    <string name="lbl_generate_report">Generate Report</string>
    <string name="lbl_report_doc">Doc Report </string>
    <string name="lbl_report_lab">Lab Report</string>
    <string name="lbl_report_shift">Shift Report</string>
    <string name="lbl_socitycode">SCode:</string>
    <string name="lbl_socityname">SName:</string>
    <string name="lbl_type">Type:</string>
    <string name="lbl_weight">Weight:</string>
    <string name="lbl_did">Did:</string>
    <string name="lbl_docno">DocNo:</string>
    <string name="lbl_cntcode">CntCode:</string>
    <string name="lbl_dumpdate">DumpDate:</string>
    <string name="lbl_fat">Fat:</string>
    <string name="lbl_lr">Lr:</string>
    <string name="lbl_snf">Snf:</string>
    <string name="lbl_old">Old</string>
    <string name="lbl_new">New</string>
    <string name="lbl_hint_enter_quantity">enter quantity</string>
    
    <string name="net_not_available">Internet connection not available !!!</string>
    <string name="invalid_authentication">Invalid Username and Password !!!</string>
    <string name="fail_communication">Communication with server Fail !!!</string>
    <string name="lbl_remember_me">Remember Me</string>
    <string name="lbl_master">Master</string>
    <string name="lbl_daily_activity">Daily Activities</string>

    <string-array name="admin_menu_array">
        <item>Master</item>
        <item>Daily Activities</item>
        <item>User management</item>
        <item>Dbf generation</item>
        <item>Reports</item>
        <item>Additional sales</item>
        <item>Receipts</item>
        <item>Maintenance</item>
        <item>Deposit DR CR</item>
    </string-array>
    <string-array name="master_menu_sub_array">
        <item>Item master</item>
        <item>Rate Master</item>
        <item>Route Master</item>
        <item>Booth Master</item>
    </string-array>
    <string-array name="shift_report_menu_array">
        <item>Gate Pass</item>
        <item>Route Truck Sheet</item>
        <item>Truck Summary</item>
    </string-array>
    <string-array name="report_menu_array">
        <item>FinalTruck Sheet</item>
        <item>Product wise Report</item>
        <item>Ledger</item>
        <item>Route Truck Sheet</item>
        <item>Truck Summary</item>
        <item>Out Standing</item>
        <item>Collection Report</item>
        <item>Commission Statement</item>
        <item>Ledger – All Both</item>
        <item>Monthly Summary</item>
        <item>City wise monthly report</item>
        <item>Crate overload report</item>
        <item>MIS Report on milk and buttermilk marketing</item>
        <item>City wise dispatch</item>
        <item>Yearly reports</item>
        <item>Monthly summary - full</item>
    </string-array>
    <string-array name="daily_menu_array">
        <item>New Day</item>
        <item>Morning Entry</item>
        <item>Morning Report</item>
        <item>Evening Entry</item>
        <item>Evening Report</item>
        <item>Daily Report</item>
        <item>End of Day</item>
    </string-array>
    <string-array name="state_array">
        <item>Andhra Pradesh</item>
        <item>Assam</item>
        <item>Gujarat</item>
        <item>Maharastra</item>
        <item>Rjasthan</item>
    </string-array>
    <string-array name="center_array">
        <item>Ahemdabad</item>
        <item>Patan</item>
        <item>Palanpur</item>
        <item>Mhesana</item>
        <item>Disa</item>
    </string-array>
    <string-array name="doc_no_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_doc_report">DocReportActivity</string>
    <string name="title_activity_lab_report">LabReportActivity</string>
    <string name="title_activity_report_detail">ReportDetailActivity</string>

    <color name="color_pink">#E55881</color>
    <color name="color_orenge">#F7BB00</color>
    <color name="color_green">#8FB921</color>
    <color name="color_nami_blue">#5987C6</color>

    <string name="title_activity_booth">BoothActivity</string>
    <string name="title_activity_supply_chain">SupplyChainActivity</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_activity_master_menu">MasterMenuActivity</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="title_activity_shift_report">ShiftReportActivity</string>
    <string name="title_activity_admin_sub_report">AdminSubReportActivity</string>
    
    <color name="color_deep_puple">#311B92</color>
    <color name="color_indigo">#1A237E</color>
    <color name="color_blue">#0D47A1</color>
    <color name="color_pink1">#880E4F</color>
    <color name="color_purple">#4A148C</color>
    <color name="color_cayn">#00BCD4</color>
    <color name="color_green1">#1B5E20</color>
    <color name="color_light_green">#33691E</color>
    <color name="color_lime">#827717</color>
    <color name="color_brown">#3E2723</color>
    <color name="color_blue_gray">#607D8B</color>
    <color name="color_blue_gray_900">#263238</color>
    
    <array name="colorlist">
        <item>@color/color_blue</item>
        <item>@color/color_pink1</item>
        <item>@color/color_purple</item>
        <item>@color/color_brown</item>
                <item>@color/color_blue</item>
        
        <item>@color/color_light_green</item>
        <item>@color/color_indigo</item>
        <item>@color/color_lime</item>
        <item>@color/color_blue_gray</item>
        <item>@color/color_deep_puple</item>
        <item>@color/color_blue_gray_900</item>

    </array>
</resources>
