<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/white"
    tools:context=".LoginActivity">
    
    <include layout="@layout/layout_top_bar" />
            
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:gravity="center_vertical"
        android:background="@drawable/bg_splash_full">
        
         <TextView
        android:id="@+id/textView_userid" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_user_id"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>
         
         <EditText 
         android:id="@+id/editText_userid"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="text"
         android:singleLine="true"
         android:hint="@string/lbl_hint_id"
         android:background="@drawable/icon_btn_normal"/>
     
      <TextView
        android:id="@+id/textView_password" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lbl_password"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>
    
     <EditText 
         android:id="@+id/editText_password"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:paddingLeft="6dp"
         android:textSize="14sp"
         android:inputType="textPassword"
         android:singleLine="true"
         android:hint="@string/lbl_hint_password"
         android:background="@drawable/icon_btn_normal"/>
     
             <CheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"
            android:text="@string/lbl_remember_me" />
     
     
     <TextView 
         android:id="@+id/login_textView"
         android:layout_width="105dp"
         android:layout_height="40dp"
         android:text="@string/lbl_login"
         android:textSize="16sp"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginRight="10dp"
         android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"
         android:textColor="@android:color/white"
         android:background="@drawable/icon_btn_login"/>
         
     
     </LinearLayout>
     
</LinearLayout>
