<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    android:background="@color/title_blue"
    tools:context=".ProductListActivity" >
      
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:text="@string/lbl_socitycode"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:id="@+id/socCodeLabTextView"
	        android:layout_width="60dp"
	        android:gravity="center"/>
         <TextView 
	        style="@style/style_TextView_black"
	        android:layout_marginLeft="10dp"
	        android:text="@string/lbl_socityname"/>
         
         <TextView 
	        style="@style/style_TextView_white"
	        android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
	        android:id="@+id/socNameLabTextView"/>
         
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:text="@string/lbl_shift"/>

        <TextView
            android:id="@+id/shiftLabTextView"
            style="@style/style_TextView_white"
            android:layout_width="60dp"
            android:gravity="center"
            android:singleLine="true" />
        
        <TextView 
	        style="@style/style_TextView_black"
	        android:layout_marginLeft="10dp"
	        android:text="@string/lbl_dumpdate"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:layout_width="130dp"
	        android:gravity="center"
	        android:id="@+id/dateLabTextView"/>
         
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
	        style="@style/style_TextView_black"
	        android:text="@string/lbl_cntcode"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:layout_width="60dp"
	        android:gravity="center"
	        android:id="@+id/cntcodeLabTextView"/>
         
    </LinearLayout>
    
   
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:textStyle="bold"
        android:layout_marginLeft="85dp"
        android:text="@string/lbl_old"/>
        <TextView 
        style="@style/style_TextView_black"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="left"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="@string/lbl_new"/>         

    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:layout_width="70dp"
        android:text="@string/lbl_fat"/>
        <TextView
            android:id="@+id/fatOldLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:singleLine="true" />
        <TextView
            android:id="@+id/fatNewLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:singleLine="true" />         

    </LinearLayout>
    
     <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:layout_width="70dp"
        android:text="@string/lbl_lr"/>
        <TextView
            android:id="@+id/lrOldLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:singleLine="true" />
        <TextView
            android:id="@+id/lrNewLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:singleLine="true" />         

    </LinearLayout>
    
      <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:layout_width="70dp"
        android:text="@string/lbl_snf"/>
        <TextView
            android:id="@+id/snfOldLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginRight="5dp"
            android:singleLine="true" />
        <TextView
            android:id="@+id/snfNewLabTV"
            style="@style/style_TextView_white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_marginLeft="5dp"
            android:singleLine="true" />         

    </LinearLayout>
   
</LinearLayout>