<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  
    <TextView style="@style/style_TextView_black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/lbl_mobile_no"/>
    <EditText 
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:editable="false"
        android:focusable="false"
        android:inputType="number"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    
    <TextView style="@style/style_TextView_black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/lbl_order_detail"/>

    
    <EditText 
        android:id="@+id/messageDetailEditText"
        android:gravity="top|left"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="5"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
         <Button 
	        android:id="@+id/messageSendBT"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginRight="5dp"
	        android:text="@string/lbl_send"/>
       <Button 
	        android:id="@+id/messageCancelBT"
	        android:layout_width="100dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginLeft="5dp"
	        android:text="@string/lbl_calcel"/>
    </LinearLayout>
</LinearLayout>
