<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".ProductListActivity" >
    
    <include layout="@layout/layout_top_bar" />
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_splash_full"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >
        
    <TextView 
        style="@style/style_TextView_black_bold"
        android:layout_marginLeft="8dp"
        android:text="@string/lbl_booth_detail"/>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:text="@string/lbl_booth_id"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:id="@+id/boothIdTextView"
	        android:layout_width="50dp"
	        android:gravity="right"/>
        <TextView 
	        style="@style/style_TextView_black"
	        android:layout_marginLeft="20dp"
	        android:text="@string/lbl_booth_area"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:layout_marginLeft="4dp"
	        android:id="@+id/boothAreaTextView"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:text="@string/lbl_balance"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:id="@+id/balanceTextView"
	        android:layout_width="90dp"
	        android:gravity="center"/>
         
        <TextView 
	        style="@style/style_TextView_black"
	        android:layout_marginLeft="10dp"
	        android:text="@string/lbl_last_order"/>
         <TextView 
	        style="@style/style_TextView_white"
	         android:layout_width="90dp"
	        android:id="@+id/lastOrderTextView"/>
    </LinearLayout>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">
        <TextView 
        style="@style/style_TextView_black"
        android:text="@string/lbl_order_shift"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:id="@+id/oshiftTextView"
	        android:layout_width="95dp"
	        android:gravity="center"/>
        <TextView 
	        style="@style/style_TextView_black"
	        android:layout_marginLeft="10dp"
	        android:text="@string/lbl_current_order"/>
         <TextView 
	        style="@style/style_TextView_white"
	        android:layout_width="95dp"
	        android:id="@+id/currentOrderTextView"/>
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/black"/>
    
   <!--  <TextView 
        style="@style/style_TextView_black"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/lbl_prodcut_detail"/>
    
    <View android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/black"/> -->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1">
    	<ScrollView 
    	android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
        android:id="@+id/productListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <View 
        android:id="@+id/view_bottombar_line"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/black"/>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal">
        <TextView 
         android:id="@+id/submit_textView"
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:text="@string/lbl_submit_order"
         android:textSize="16sp"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginRight="10dp"
         android:textColor="@android:color/white"
         android:background="@drawable/icon_btn_login"/>
        <TextView 
         android:id="@+id/sms_textView"
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:text="@string/lbl_send_sms"
         android:textSize="16sp"
         android:textStyle="bold"
         android:gravity="center"
         android:layout_marginRight="10dp"
         android:textColor="@android:color/white"
         android:background="@drawable/icon_btn_login"/>
       <!--  <TextView 
         android:id="@+id/cancel_textView"
         android:layout_width="90dp"
         android:layout_height="35dp"
         android:text="@string/lbl_calcel"
         android:textSize="16sp"
         android:textStyle="bold"
         android:gravity="center"
         android:textColor="@android:color/white"
         android:background="@drawable/icon_btn_login"/> -->
    </LinearLayout>
        </LinearLayout>
    
</LinearLayout>
