<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <include layout="@layout/layout_top_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_splash_full"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/supply_booth_delivery_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_nami_blue"
            android:gravity="center"
            android:text="@string/lbl_booth_delivery"
            android:textColor="@color/white_bg"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/supply_route_summary_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_green"
            android:gravity="center"
            android:text="@string/lbl_route_summary"
            android:textColor="@color/white_bg"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/supply_stock_summary_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/color_pink"
            android:gravity="center"
            android:text="@string/lbl_stock_summary"
            android:textColor="@color/white_bg"
            android:textSize="18sp"
            android:textStyle="bold" /> 
            
    </LinearLayout>
</LinearLayout>